--- a/PolNetWorkbook.ipynb
+++ b/PolNetWorkbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "495d0d32",
+   "id": "94ce0615",
    "metadata": {},
    "source": [
     "# Introduction to Networkx\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "11e9e9e6",
+   "id": "e3fafa45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a5bb34f7",
+   "id": "0cd3432b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a764b3c3",
+   "id": "ce28d739",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "acff7c10",
+   "id": "b8202c6d",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0fc1f29c",
+   "id": "6e25c524",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95046e9f",
+   "id": "2dd8f9be",
    "metadata": {},
    "source": [
     "For edges where the weight is specified, we can access that using using the nodes and attribute name as keys. In an undirected network, it doesn't matter which order you put the node-keys in:"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "129803a5",
+   "id": "f0b27b24",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b85d62fe",
+   "id": "5f6cff7b",
    "metadata": {},
    "source": [
     "Note that we didn't specify a weight when we added the edge `b - c`. By default, no attributes are specified, so we can't access the \"weight\" of this edge without adding \"weight\" as an attribute first. Eg, the following code with throw an error:"
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "64cea974",
+   "id": "0d7f7fb1",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41dff89e",
+   "id": "daf93d6e",
    "metadata": {},
    "source": [
     "But, can use the dictionary method `.setdefault()` to ensure the attribute is added if we need to. More on dictionaries soon!"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "60c883c0",
+   "id": "bd9c6a11",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0de89d37",
+   "id": "628c5bc6",
    "metadata": {},
    "source": [
     "Note: You can add arbitrary node or edge attributes. There is no set list of attribute names you have to draw from. Attributes can be a range of types."
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8c6251ed",
+   "id": "1e53f024",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe37d3a2",
+   "id": "6159bafc",
    "metadata": {},
    "source": [
     "## Data format and background\n",
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a3a649d",
+   "id": "f49fd4b9",
    "metadata": {},
    "source": [
     "Here, we see that each tweet dictionary contains a lot of information about the tweet, which is all contained in nested dictionary objects. We can use `[key]` to access a given key-value pair (where the value may be a dictionary!) and we can use `.keys()` to see all available keys. Eg, the top-level keys available for this tweet are:"
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d05cfaed",
+   "id": "6e92fa8d",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81168395",
+   "id": "9dbd0ef2",
    "metadata": {},
    "source": [
     "While we could work directly with the `text` Twitter makes hashtag analysis particularly easy by indentifying the specific hashtags which exist in the tweet. Note that field *only* stores items which were explicitly denoted as hashtags (using '#'). Eg, given the text:\n",
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "50265aca",
+   "id": "1c25cb19",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b9482bbe",
+   "id": "efdfd0fd",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b9b04816",
+   "id": "b5a9e5a0",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f971c1ef",
+   "id": "43407fb7",
    "metadata": {},
    "source": [
     "We can also retrieve hashtags \"the old fashioned way\" by iterating over word in the tweet and looking for words that start with the '#' symbol. \n",
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fe3a4947",
+   "id": "88c6bc01",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8d71f279",
+   "id": "95f64ca7",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48370605",
+   "id": "ac13dd81",
    "metadata": {},
    "source": [
     "## Making a network\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9c029a86",
+   "id": "9059cb42",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d43b4b74",
+   "id": "3c97aaac",
    "metadata": {},
    "source": [
     "### Sample analysis"
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "12826384",
+   "id": "15ae24a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "00138bb8",
+   "id": "b3f71918",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b86fcab2",
+   "id": "5903018e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d782c6fe",
+   "id": "ba3f7bda",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bb445f4",
+   "id": "89cd1a99",
    "metadata": {},
    "source": [
     "### Look at top hashtags"
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1aeb4db5",
+   "id": "bb724541",
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "dbe9f522",
+   "id": "22b12b69",
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c8b8e0a",
+   "id": "bf4c14c7",
    "metadata": {},
    "source": [
     "### Removing capitalization\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bdcf4a29",
+   "id": "3ec6312b",
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2e3d1e00",
+   "id": "383a9bad",
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2a988112",
+   "id": "20ca3731",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "50a2af0a",
+   "id": "5c474cd4",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29eba972",
+   "id": "c92ffd54",
    "metadata": {},
    "source": [
     "### Text processing and cleaning"
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "d4ce9760",
+   "id": "32a534a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0d484c78",
+   "id": "c39855a7",
    "metadata": {},
    "outputs": [
     {
@@ -4653,7 +4653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7c1565a",
+   "id": "f8d826ae",
    "metadata": {},
    "source": [
     "SpaCy now stores this text as essentially a series of \"tokens\". Tokens are strings of arbitrary length that form a\n",
@@ -4696,7 +4696,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e759e8d7",
+   "id": "a2c5e0d5",
    "metadata": {},
    "outputs": [
     {
@@ -4714,7 +4714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf1ac9ea",
+   "id": "4cb8a94b",
    "metadata": {},
    "source": [
     "SpaCy also stores information about each of these tokens. You can see a list of all available token attributes [here](https://spacy.io/api/token#attributes). Here are a few core ones:\n",
@@ -4732,7 +4732,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6430c6a7",
+   "id": "2691e9d6",
    "metadata": {},
    "outputs": [
     {
@@ -4812,7 +4812,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4f862507",
+   "id": "68011d52",
    "metadata": {},
    "outputs": [
     {
@@ -4833,7 +4833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6434f10c",
+   "id": "631cb69d",
    "metadata": {},
    "source": [
     "### Working with named entities"
@@ -4842,7 +4842,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "dca31a22",
+   "id": "ce5887ba",
    "metadata": {},
    "outputs": [
     {
@@ -4861,7 +4861,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "75db28b8",
+   "id": "70ccac05",
    "metadata": {},
    "outputs": [
     {
@@ -12937,7 +12937,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "7370d9e9",
+   "id": "85eca091",
    "metadata": {},
    "outputs": [
     {
@@ -12975,7 +12975,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "3b69ef2d",
+   "id": "8a097b49",
    "metadata": {},
    "outputs": [
     {
@@ -13471,7 +13471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "985b6ade",
+   "id": "2bd8721e",
    "metadata": {},
    "source": [
     "### Caveat / Disclaimer:\n",
@@ -13481,7 +13481,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "fd7eead9",
+   "id": "a43ec128",
    "metadata": {},
    "outputs": [
     {
@@ -13514,7 +13514,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "316a4790",
+   "id": "203f35c1",
    "metadata": {},
    "outputs": [
     {
@@ -14418,7 +14418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0071f4a4",
+   "id": "33b3ff95",
    "metadata": {},
    "source": [
     "### let's find sentences which mention people"
@@ -14427,7 +14427,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e69fe050",
+   "id": "e5a51471",
    "metadata": {},
    "outputs": [
     {
@@ -14453,7 +14453,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "a7ae17c4",
+   "id": "8f8fec5e",
    "metadata": {},
    "outputs": [
     {
@@ -14481,7 +14481,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "72fbda59",
+   "id": "47578352",
    "metadata": {},
    "outputs": [
     {
@@ -14517,7 +14517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35a85c79",
+   "id": "94fa8c2d",
    "metadata": {},
    "source": [
     "### PSA: \n",
@@ -14532,7 +14532,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "70bf234e",
+   "id": "2b29d46e",
    "metadata": {},
    "outputs": [
     {
@@ -14564,7 +14564,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4acfc6a8",
+   "id": "d6e4e2ea",
    "metadata": {},
    "outputs": [
     {
@@ -16396,7 +16396,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "73878f8d",
+   "id": "d420eafa",
    "metadata": {},
    "outputs": [
     {
@@ -16447,7 +16447,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "fbec9b66",
+   "id": "a6b65f67",
    "metadata": {},
    "outputs": [
     {
@@ -16470,7 +16470,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c02e2737",
+   "id": "e5f242d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16486,7 +16486,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3b5b14d4",
+   "id": "33d14a47",
    "metadata": {},
    "outputs": [
     {
@@ -16661,7 +16661,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "10398623",
+   "id": "e991f16a",
    "metadata": {},
    "outputs": [
     {
@@ -16710,7 +16710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d6bd092",
+   "id": "a32cdf72",
    "metadata": {},
    "source": [
     "# Example 3"
@@ -16719,7 +16719,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "bd7e83e2",
+   "id": "37828c5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16731,7 +16731,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "049b3679",
+   "id": "2b65afaa",
    "metadata": {},
    "outputs": [
     {
@@ -16840,7 +16840,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "aa4530a8",
+   "id": "ef3cf79f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16854,7 +16854,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "c9d7abfc",
+   "id": "763de22c",
    "metadata": {},
    "outputs": [
     {
@@ -16884,7 +16884,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "b4023a3e",
+   "id": "43844b9a",
    "metadata": {},
    "outputs": [
     {
@@ -20512,7 +20512,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "57e4babd",
+   "id": "38705205",
    "metadata": {},
    "outputs": [
     {
@@ -20535,7 +20535,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "19b1856f",
+   "id": "524c22b9",
    "metadata": {},
    "outputs": [
     {
@@ -20566,7 +20566,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "38d6f45b",
+   "id": "918d9c56",
    "metadata": {},
    "outputs": [
     {
@@ -20597,7 +20597,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "d0d3d26c",
+   "id": "66c7bf59",
    "metadata": {},
    "outputs": [
     {
@@ -20634,7 +20634,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "262a9682",
+   "id": "640b3198",
    "metadata": {},
    "outputs": [
     {
@@ -20668,7 +20668,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "9db0c55d",
+   "id": "d465defe",
    "metadata": {},
    "outputs": [
     {
@@ -20688,7 +20688,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "e7029aaa",
+   "id": "cdb19be3",
    "metadata": {
     "scrolled": true
    },
@@ -20711,7 +20711,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "584ade2c",
+   "id": "6b9651a8",
    "metadata": {},
    "outputs": [
     {
@@ -20730,7 +20730,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "401bb9d4",
+   "id": "74a6a1e9",
    "metadata": {},
    "outputs": [
     {
@@ -20749,7 +20749,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "4ec83f28",
+   "id": "660f505a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20768,7 +20768,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "ee185a34",
+   "id": "32b47949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20779,7 +20779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ba8b909",
+   "id": "4981dafd",
    "metadata": {},
    "outputs": [
     {
@@ -20787,7 +20787,11 @@
      "output_type": "stream",
      "text": [
       "Checking k = 100\n",
-      "Checking k = 200\n"
+      "Checking k = 200\n",
+      "Checking k = 300\n",
+      "Checking k = 400\n",
+      "Checking k = 500\n",
+      "Checking k = 600\n"
      ]
     }
    ],
@@ -20806,7 +20810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6139ca1e",
+   "id": "e9167306",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20824,7 +20828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c3c2c39",
+   "id": "7ab20e64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20836,7 +20840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea71b301",
+   "id": "a535f1a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -20844,7 +20848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bded0e26",
+   "id": "75e748f7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -20852,7 +20856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5910fa47",
+   "id": "b4723e33",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -20860,7 +20864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee8e622f",
+   "id": "c75a65e3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -20868,7 +20872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e701009",
+   "id": "b8120b71",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -20876,7 +20880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "666837c8",
+   "id": "2a207ed5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -20884,7 +20888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2110e0f7",
+   "id": "8e9e77c7",
    "metadata": {},
    "outputs": [],
    "source": []
